Create Sign up with firebase

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,8 @@
 NODE_PATH=./src
+REACT_APP_FIREBASE_API_KEY=AIzaSyBdAtHQhpUdtdoao0ReJFXxl5Zma2QTw8w
+REACT_APP_FIREBASE_AUTH_DOMAIN=crwn-db-75fe5.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=crwn-db-75fe5
+REACT_APP_FIREBASE_STORAGE_BUCKET=crwn-db-75fe5.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=86161660745
+REACT_APP_FIREBASE_APP_ID=1:86161660745:web:9bfe3972e353f285d25898
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-NVR2HS0SC5
